# cow

./: .env  .gitignore  Cargo.toml
migrations/: 20250215155824_problems-table.sql  20250217202020_init.sql  20250218000708_insert-root-node.sql
src/: app.rs  barn.rs  bessie.rs  database.rs  farmer_john.rs  main.rs  node_graph.rs  problem.rs
src/schema/: entry.rs  folder.rs  mod.rs  problem.rs
