[package]
name = "cow"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
