[package]
name = "cow"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
anyhow = "1.0.95"
dotenvy = "0.15.7"
eframe = "0.31.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
